# plymouth

./: .gitlab-ci.yml  autogen.sh  build.sh  configure.ac  meson.build  meson_options.txt
docs/: meson.build  plymouth-set-default-theme.1.in  plymouth.1.in  plymouth.8.in  plymouthd.8.in  theme.plymouth.5.in
po/: LINGUAS  ar.po  be.po  bo.po  ca.po  cs.po  de.po  el.po  es.po  et.po  fi.po  fr.po  he.po  hu.po  id.po  it.po  ka.po  kab.po  kk.po  ko.po  lt.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
scripts/: check-format.sh  generate-version.sh  new-object.sh  plymouth-generate-initrd.in  plymouth-populate-initrd.in  plymouth-set-default-theme.in  plymouth-update-initrd
src/: main.c  meson.build  ply-boot-server-private.h  ply-boot-server.c  ply-boot-server.h  ply-peer-credentials-private.h  ply-peer-credentials.c  plymouthd-policy-private.h  plymouthd-policy.c  plymouthd.defaults
src/client/: ply-boot-client-private.h  ply-boot-client.c  plymouth.c
src/libply/: meson.build  ply-bitarray.h  ply-buffer.c  ply-buffer.h  ply-clock-private.h  ply-clock.c  ply-command-parser.c  ply-event-loop.c  ply-key-file.c  ply-key-file.h  ply-private.h  ply-progress.c  ply-rectangle.c  ply-rectangle.h  ply-region.c  ply-secure-boot-private.h  ply-secure-boot.c  ply-trigger.c  ply-utils.c  ply-utils.h
src/libply-splash-core/: meson.build  ply-active-console-private.h  ply-active-console.c  ply-boot-splash-plugin.h  ply-boot-splash.c  ply-boot-splash.h  ply-device-manager.c  ply-device-manager.h  ply-input-device.c  ply-keyboard.c  ply-keyboard.h  ply-kmsg-reader.c  ply-kmsg-reader.h  ply-pixel-buffer.c  ply-pixel-buffer.h  ply-pixel-display.c  ply-renderer-plugin.h  ply-renderer-private.h  ply-renderer.c  ply-renderer.h  ply-rich-text.c  ply-rich-text.h  ply-terminal-emulator.c  ply-terminal-emulator.h  ply-terminal.c  ply-terminal.h  ply-text-progress-bar.c  ply-text-step-bar.c  ply-vconsole-private.h  ply-vconsole.c
src/libply-splash-graphics/: Makefile.am  meson.build  ply-animation-time-private.h  ply-animation-time.c  ply-animation.c  ply-animation.h  ply-capslock-icon.c  ply-capslock-icon.h  ply-console-viewer.c  ply-console-viewer.h  ply-entry.c  ply-image-sequence.c  ply-image-sequence.h  ply-image.c  ply-image.h  ply-keymap-icon.c  ply-keymap-icon.h  ply-kmsg-viewer.c  ply-kmsg-viewer.h  ply-label-plugin.h  ply-label-private.h  ply-label.c  ply-label.h  ply-multiscale-image.c  ply-multiscale-image.h  ply-progress-animation.c  ply-throbber.c  ply-throbber.h
src/plugins/controls/: meson.build
src/plugins/controls/label/: meson.build
src/plugins/controls/label-freetype/: plugin.c
src/plugins/controls/label-ft/: plugin.c
src/plugins/controls/label-pango/: plugin.c
src/plugins/renderers/: meson.build
src/plugins/renderers/drm/: plugin.c
src/plugins/renderers/frame-buffer/: plugin.c
src/plugins/renderers/wayland/: meson.build  plugin.c
src/plugins/renderers/x11/: plugin.c
src/plugins/splash/: meson.build
src/plugins/splash/console-viewer/: meson.build  plugin.c
src/plugins/splash/fade-throbber/: plugin.c
src/plugins/splash/script/: meson.build  plugin.c  script-lib-consoleviewer.script  script-lib-math.c  script-lib-plymouth.c  script-lib-sprite.c  script-lib-sprite.h  script-lib-string.c  script-parse.c  script-scan.c  script-scan.h
src/plugins/splash/space-flares/: plugin.c
src/plugins/splash/text/: plugin.c
src/plugins/splash/tribar/: plugin.c
src/plugins/splash/two-step/: meson.build  plugin.c  ply-bgrt-private.h  ply-bgrt.c
systemd-units/: Makefile.am  meson.build  plygetty@.service.in  plymouth-deactivate.service.in  plymouth-quit.service.in  plymouth-start.service.in  plymouth-switch-root-initramfs.service.in
tests/: fuzz-command-parser.c  fuzz-image.c  fuzz-key-file.c  fuzz-script-scan.c  fuzz-terminal-emulator.c  meson.build  ply-test-seeded-random.h  ply-test.h  qemu-init.sh  qemu-plymouthd.conf  test-active-console.c  test-animation-time.c  test-array.c  test-bgrt.c  test-bitarray.c  test-boot-client.c  test-boot-server.c  test-boot-splash.c  test-buffer.c  test-command-parser.c  test-event-loop.c  test-generate-initrd.sh  test-generate-version.sh  test-hashtable.c  test-image.c  test-key-file.c  test-label.c  test-list.c  test-logger.c  test-pixel-buffer.c  test-plymouth.sh  test-plymouthd-fd-escrow.sh  test-plymouthd-policy.c  test-plymouthd.sh  test-populate-initrd.sh  test-progress.c  test-qemu-boot.sh  test-rectangle.c  test-region.c  test-renderer.c  (+11 more)
tests/plugins/: fake-label.c  fake-label.h  fake-splash-theme.conf  fake-splash.c  fake-splash.h  meson.build
tests/plugins/renderers/: fake-renderer.c  fake-renderer.h  meson.build
themes/: meson.build
themes/bgrt/: bgrt.plymouth.in
themes/console-viewer/: console-viewer.plymouth.in  meson.build
themes/fade-in/: fade-in.plymouth.in
themes/script/: script.plymouth.in
themes/solar/: solar.plymouth.in
themes/spinfinity/: spinfinity.plymouth.in
themes/tux/: LICENSE  meson.build
