install_data(
  'bullet.png',
  'entry.png',
  'lock.png',
  'capslock.png',
  'keyboard.png',
  'keymap-render.png',
  'animation-1.png',
  'throbber-1.png',
  'throbber-2.png',
  'throbber-3.png',
  'throbber-4.png',
  'throbber-5.png',
  'throbber-6.png',
  'throbber-7.png',
  'throbber-8.png',
  'throbber-9.png',
  'throbber-10.png',
  'throbber-11.png',
  'throbber-12.png',
  'throbber-13.png',
  'throbber-14.png',
  'throbber-15.png',
  'throbber-16.png',
  'throbber-17.png',
  'throbber-18.png',
  'throbber-19.png',
  'throbber-20.png',
  'throbber-21.png',
  'throbber-22.png',
  'throbber-23.png',
  'throbber-24.png',
  'throbber-25.png',
  'throbber-26.png',
  'throbber-27.png',
  'throbber-28.png',
  'throbber-29.png',
  'throbber-30.png',
  'throbber-31.png',
  'throbber-32.png',
  install_dir: plymouth_theme_path / 'tux',
)
